--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -109,10 +109,11 @@ body {
 /* Styling the error message */
 #error-m {
     background-color: #f8d7da;
-    color: #e72134 !important;  /* Make sure it's applied */
+    color: #e72134;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
+    font-size: 14px;
 }
 
 .register-form {
@@ -141,4 +142,28 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
+
+#password-requirements ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#password-requirements li {
+    font-size: 14px;
+}
+
+.valid {
+    color: green;
+}
+
+.invalid {
+    color: red;
+}
+
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
 
