--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "Montserrat";
-    background-color: #f8f9fa;
+    background-color: #ececec;
     display: flex;
     justify-content: center;
     align-items: center;
